manifests/munkireport/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: munkireport
  labels:
    app: munkireport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: munkireport
  template:
    metadata:
      labels:
        app: munkireport
    spec:
      containers:
      - name: munkireport
        image: munkireport/munkireport-php:5.6.5
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 256Mi
