manifests/munkireport/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: munkireport
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: munkireport
          servicePort: 8080
